daniel-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daniel-deployment
  labels:
    app: daniel-app-label
spec:
  replicas: 3
  selector:
    matchLabels:
      app: daniel-app-label
  template:
    metadata:
      labels: 
        app: daniel-app-label
    spec:
      containers:
      - name: daniel
        image: hashicorp/http-echo:0.2.3
        args:
        - "-text='This is the text from the application'"
        ports:
        - containerPort: 5678
---
kind: Service
apiVersion: v1
metadata:
  name: daniel-service
spec:
  selector:
    app: daniel-app-label
  ports:
    - port: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: daniel-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/daniel"
        backend:
          service:
            name: daniel-service
            port:
              number: 5678
---
