ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-server-ingress
  namespace: local-apps-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: test-selfsigned
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: https
    host: argocd.127.0.0.1.nip.io
  tls:
  - secretName: https-cert
    hosts:
    - argocd.127.0.0.1.nip.io
